--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-<script>
-  var socket = io();
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font: 13px Helvetica, Arial; }
-        form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-        #messages { list-style-type: none; margin: 0; padding: 0; }
-        #messages li { padding: 5px 10px; }
-        #messages li:nth-child(odd) { background: #eee; }
-      </style>
+        body {
+            background-color: black
+        }
+
+        #grad1 {
+            height: 648px;
+            ;
+            background-color: red;
+            /* For browsers that do not support gradients */
+            background-image: linear-gradient(#4c9de2, #d6dde4);
+            /* Standard syntax (must be last) */
+        }
+
+        .tarefa {
+            background: blue;
+            width: 300px;
+            height: 225px;
+            align-items: center;
+            margin-top: 15%;
+            background-image: linear-gradient(#4c9de2, #d6dde4);
+            background: black;
+        }
+
+        .form {
+            text-align: center;
+            padding-top: 5%;
+        }
+
+        .lbl {
+            font-size: 26px;
+            margin-top: 2px;
+            font-weight: bold;
+            color: white;
+        }
+
+        .salvar {
+            margin-top: 3%;
+            float: right;
+        }
+
+        .butao {
+            border-radius: 10px;
+            font-weight: bold;
+            display: inline-block;
+            text-align: center;
+            transition: all 0.4s;
+            cursor: pointer;
+            margin-top: 5%;
+        }
+        .butao:hover {
+            border-color: black;
+            color:white;
+            background-color: #4c9de2
+        }
+        .msg {
+            text-align: center;
+            height: 50px;
+            width: 20%;
+            margin-top: 2%;
+            margin-left: 46.5%;
+            font-size: 24px;
+            visibility: hidden;
+            font-weight: bold;
+        }
+
+        .inp {
+            margin-top: 3%;
+        }
+        #snackbar {
+  visibility: hidden;
+  /* Hidden by default. Visible on click */
+  min-width: 250px;
+  /* Set a default minimum width */
+  margin-left: -125px;
+  /* Divide value of min-width by 2 */
+  background-color: rgb(34, 206, 214);
+  /* Black background color */
+  color: black(255, 255, 255);
+  /* White text color */
+  text-align: center;
+  /* Centered text */
+  border-radius: 2px;
+  /* Rounded borders */
+  padding: 16px;
+  /* Padding */
+  position: fixed;
+  /* Sit on top of the screen */
+  z-index: 1;
+  /* Add a z-index if needed */
+  left: 50%;
+  /* Center the snackbar */
+  bottom: 30px;
+  /* 30px from the bottom */
+}
+.text {
+  font-size: 48px;
+  margin-right: 60%;
+  float: left;
+  padding-left: 10px;
+  border-bottom: 1px solid black;
+  width: 100%;
+  text-align: initial
+}
+.logout {
+  margin-top: 225%;
+}
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible;
+  /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+    </style>
 </head>
-<body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Enviar</button>
-    </form>
+
+<body id="grad1">
+    <div class="tarefa container clearfix">
+        <form class="form" id="formulario" type='button' autocomplete="off" action='/chat'>
+            <label class='lbl'>Como você se chama?</label>
+            <input type="text" class='inp form-control' id="user" name="fname" placeholder='Nome'><br>
+            <button type="button" onclick="enviar()" class="btn btn-light salvar btn-sm butao">Entrar</button>
+        </form>
+    </div>
+    <div id="snackbar" class='snackbar'></span id='save'>Nome não pode ser nulo</span></div>
 </body>
 <script>
-    $(function () {
-      var socket = io();
-      $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
-        return false;
-      });
-    });
-    $(function () {
-    var socket = io();
-    $('form').submit(function(e){
-      e.preventDefault(); // prevents page reloading
-      socket.emit('chat message', $('#m').val());
-      $('#m').val('');
-      return false;
-    });
-    socket.on('chat message', function(msg){
-      $('#messages').append($('<li>').text(msg));
-    });
-  });
-  </script>
+    function enviar() {
+        var nome = $('#user').val();
+        if(nome == '') {
+            var x = document.getElementById("snackbar");
+            x.className = "show";
+            setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+        } else {
+            window.location.href = '/chat:'+nome;
+            
+        }
+    }
+    $(document).keypress(function(event){
+    var keycode = (event.keyCode ? event.keyCode : event.which);
+    if(keycode == '13'){
+        console.log('13');
+        
+        enviar()
+    }
+});
+</script>
+
 </html>
